--- a/src/Insight.Box.FrontEnd/src/assets/main.css
+++ b/src/Insight.Box.FrontEnd/src/assets/main.css
@@ -1,3 +1,27 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Layout */
+
+body {
+  @apply font-poppins;
+}
+
+.view {
+  @apply h-screen w-screen;
+}
+
+.tab {
+  @apply h-full w-full;
+}
+
+.content-padding {
+  @apply px-6 md:px-10 xl:px-32
+}
+
+/* Theme styles */
+
+.theme-view-bg {
+  @apply bg-gradient-to-br from-30% from-secondaryColor to-primaryColor;
+}
