Add category training data service

--- a/src/Insight.Box.FrontEnd/src/assets/main.css
+++ b/src/Insight.Box.FrontEnd/src/assets/main.css
@@ -25,6 +25,10 @@ body {
 
 /* Theme styles */
 
+.theme-bg {
+  @apply bg-secondaryColor;
+}
+
 .theme-gradient-bg {
   @apply bg-gradient-to-br from-30% from-secondaryColor to-primaryColor;
 }
