Fix modal base transition

--- a/src/Insight.Box.FrontEnd/src/assets/formStyles.css
+++ b/src/Insight.Box.FrontEnd/src/assets/formStyles.css
@@ -51,7 +51,7 @@
 }
 
 .theme-action-transition {
-  @apply transition duration-300;
+  @apply transition-all duration-300;
 }
 
 .theme-input-text {
