--- a/src/Insight.Box.FrontEnd/src/assets/formStyles.css
+++ b/src/Insight.Box.FrontEnd/src/assets/formStyles.css
@@ -6,11 +6,27 @@
   hover:after:bg-opacity-10 hover:after:bg-white
 }
 
-.theme-action-layout {
+.action-layout {
   @apply h-[60px];
 }
 
-.theme-action-circle-layout {
+.action-small-layout {
+  @apply h-[45px];
+}
+
+.action-extra-small-layout {
+  @apply h-[35px];
+}
+
+/*.action-square-layout {*/
+/*  @apply h-[40px] w-[40px];*/
+/*}*/
+
+/*.theme-action-square-mini-layout {*/
+/*  @apply h-[40px] w-[40px]*/
+/*}*/
+
+.action-circle-layout {
   @apply h-[40px] w-[40px] rounded-full;
 }
 
@@ -35,7 +51,7 @@
 }
 
 .theme-action-transition {
-  @apply transition duration-300;
+  @apply transition-all duration-300;
 }
 
 .theme-input-text {
@@ -70,14 +86,22 @@
   @apply transition duration-300;
 }
 
-.theme-btn-bg-primary {
+.theme-action-primary {
   @apply bg-accentPrimaryColor;
 }
 
-.theme-btn-bg-secondary {
+.theme-action-secondary {
   @apply bg-accentSecondaryColor;
 }
 
-.theme-btn-bg-danger {
+.theme-action-danger {
   @apply bg-dangerColor;
+}
+
+.theme-action-success {
+  @apply bg-successColor;
+}
+
+.theme-action-disabled {
+  @apply bg-accentSecondaryColor;
 }
