Add nothing to see illustration for workflow result

--- a/src/Insight.Box.FrontEnd/src/assets/cardStyles.css
+++ b/src/Insight.Box.FrontEnd/src/assets/cardStyles.css
@@ -6,6 +6,10 @@
   @apply rounded-xl;
 }
 
+.card-top-round {
+  @apply rounded-t-xl;
+}
+
 .card-bg {
   @apply bg-secondaryColor border-[0.5px] border-accentSecondaryColor;
 }
