Update multi chip to allow row limit

--- a/src/Insight.Box.FrontEnd/src/assets/formStyles.css
+++ b/src/Insight.Box.FrontEnd/src/assets/formStyles.css
@@ -102,6 +102,10 @@
   @apply bg-successColor;
 }
 
+.theme-action-processing {
+  @apply bg-processingColor;
+}
+
 .theme-action-disabled {
   @apply bg-accentSecondaryColor;
 }
